# BookShelf

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  grpc.sh  main.py  migrate.sh  pytest.ini  start_grpc_server.py
fastapi_server/: Dockerfile
fastapi_server/auth_user/: check_auth.py  hash_password.py
fastapi_server/auth_user/endpoint_auth/: endpoint_auth.py
fastapi_server/endpoint_book/: book_actions.py  grpc_book_actions.py
fastapi_server/repository/config/: config.py
fastapi_server/repository/posgres/: posgres.py
fastapi_server/repository/service/: book_service.py  user_service.py
grpc_docker/: Dockerfile
grpc_docker/grpc_server/: book_pb2_grpc.py  grpc_server.py
grpc_server/: Dockerfile  book_pb2.py  book_pb2_grpc.py  grpc_server.py
poetry/: pyproject.toml
rabbitmq/: consuming_message.py
src/: main.py  start_grpc_server.py
src/auth_user/: token.py
src/auth_user/endpoint_auth/: endpoint_auth.py
src/endpoint_book/: book_actions.py  grpc_book_actions.py
src/grpc_server/: grpc_server.py
src/grpc_service/: book.proto  book_pb2_grpc.py  grpc_client.py  grpc_service.py
src/migrations/: env.py
src/migrations/versions/: b4bef6613c16_.py
src/rabbitmq/: consuming_message.py  rebbit_coonection.py
src/rebbitmq/: publish_message.py
src/repository/config/: config.py  engine.py
src/repository/models/: models.py
src/repository/posgres/: abc.py  posgres.py
src/repository/service/: book_service.py  user_service.py
unit_test/: test_auth.py  test_book_action.py
(+1 files in other folders)
