[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["yngcrovi <crovion@gemail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.66.1"
grpcio-tools = "^1.66.1"
fastapi = {extras = ["all"], version = "^0.115.0"}
psycopg-binary = "^3.2.2"
alembic = "^1.13.2"
pydantic-settings = "^2.5.2"
sqlalchemy = "^2.0.35"
pika = "^1.3.2"
pika-stubs = "^0.1.3"
pytest = "^8.3.3"
asynctest = "^0.13.0"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
pydantic = "^2.9.2"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
psycopg = "^3.2.2"
aio-pika = "^9.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
